resize search input to prevent go button wrapping in FF PC and Chrome PC

--- a/public/stylesheets/market/market_styles.css
+++ b/public/stylesheets/market/market_styles.css
@@ -105,7 +105,7 @@ h3 {
 }
 
 .main_search .search_input {
-	width:90px;
+	width:84px;
 	color:#52cbba;
 	font-family:verdana;
 	font-size:11px;
